# Archpack

./: .coderabbit.yaml  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
demo/: README.md  run.ps1  run.sh
demo/pack/: agents.toml
demo/pack/tree/: README.md  pyproject.toml
demo/pack/tree/docs/: architecture.md  commands.md
demo/pack/tree/src/taskflow/: __init__.py  __main__.py  cli.py  models.py
demo/pack/tree/src/taskflow/services/: __init__.py  store.py
demo/pack/tree/tests/: test_store.py
docs/: experiment-policy.md  format.md  plugin-model.md  roadmap.md  usage.md  user-story-map.md
docs/plugins/: agents.md
examples/agents-pack/: README.md  agents.toml
examples/minimal-pack/tree/: README.md
src/archpack/: __init__.py  cli.py  core.py
src/archpack/plugins/: __init__.py
src/archpack/plugins/agents/: __init__.py  commands.py  generator.py  plugin.yml
tests/: conftest.py  test_agents_inheritance.py  test_agents_plugin.py  test_agents_validation.py  test_cli.py  test_core.py  test_plugin_descriptor.py
